--- a/sass/components/_mixed-gallery.scss
+++ b/sass/components/_mixed-gallery.scss
@@ -8,6 +8,17 @@
 	grid-template-rows: repeat(8, 5vw);
 	gap: 1.5rem;
 
+	// 1100px
+	@media only screen and (max-width: 68.75em) {
+		grid-template-columns: repeat(6, 1fr);
+		grid-template-rows: repeat(12, 7vw);
+	}
+
+	// 800px
+	@media only screen and (max-width: 50em) {
+		gap: 1rem;
+	}
+
 	&__item {
 		position: relative;
 		margin: 0;
@@ -18,6 +29,11 @@
 
 		&--1 {
 			grid-area: 1 / 1 / span 4 / span 2;
+
+			// 1100px
+			@media only screen and (max-width: 68.75em) {
+				grid-area: 1 / 1 / span 5 / span 2;
+			}
 		}
 
 		&--2 {
@@ -30,38 +46,78 @@
 
 		&--4 {
 			grid-area: 1 / 7 / span 2 / span 1;
+
+			@media only screen and (max-width: 68.75em) {
+				grid-area: 3 / 6 / span 2 / span 1;
+			}
 		}
 
 		&--5 {
 			grid-area: 1 / 8 / span 5 / span 2;
+
+			@media only screen and (max-width: 68.75em) {
+				grid-area: 7 / 5 / span 4 / span 2;
+			}
 		}
 
 		&--6 {
 			grid-area: 3 / 6 / span 3 / span 2;
+
+			@media only screen and (max-width: 68.75em) {
+				grid-area: 7 / 3 / span 3 / span 2;
+			}
 		}
 
 		&--7 {
 			grid-area: 4 / 3 / span 2 / span 2;
+
+			@media only screen and (max-width: 68.75em) {
+				grid-area: 4 / 3 / span 3 / span 3;
+			}
 		}
 
 		&--8 {
 			grid-area: 4 / 5 / span 2 / span 1;
+
+			@media only screen and (max-width: 68.75em) {
+				grid-area: 10 / 4 / span 3 / span 1;
+
+				& > * > * {
+					object-position: right;
+				}
+			}
 		}
 
 		&--9 {
 			grid-area: 5 / 1 / span 4 / span 2;
+
+			@media only screen and (max-width: 68.75em) {
+				grid-area: 6 / 1 / span 4 / span 2;
+			}
 		}
 
 		&--10 {
 			grid-area: 6 / 3 / span 3 / span 1;
+
+			@media only screen and (max-width: 68.75em) {
+				grid-area: 5 / 6 / span 2 / span 1;
+			}
 		}
 
 		&--11 {
 			grid-area: 6 / 7 / span 3 / span 3;
+
+			@media only screen and (max-width: 68.75em) {
+				grid-area: 10 / 1 / span 3 / span 3;
+			}
 		}
 
 		&--12 {
 			grid-area: 6 / 4 / span 3 / span 3;
+
+			@media only screen and (max-width: 68.75em) {
+				grid-area: 11 / 5 / span 2 / span 2;
+			}
 		}
 
 		// make hovered card overlap non-hovered cards
@@ -102,6 +158,12 @@
 		display: block;
 		border-radius: 2rem;
 		box-shadow: .2rem .2rem 1rem rgba(0,0,0,.2);
+		transform: rotateY(0);
+
+		// 800px
+		@media only screen and (max-width: 50em) {
+			border-radius: 1.5rem;
+		}
 	}
 
 	&__caption {
@@ -114,6 +176,11 @@
     	border-radius: 2rem;
 		background-color: rgba(0,0,0,.5);
 
+		// 800px
+		@media only screen and (max-width: 50em) {
+			border-radius: 1.5rem;
+		}
+
 		@supports (-webkit-backdrop-filter: blur(.3rem)) or (backdrop-filter: blur(.3rem)) {
 			backdrop-filter: blur(.3rem) brightness(0.8);
 			background-color: transparent;
@@ -125,6 +192,32 @@
 		font-size: 3rem;
 		text-align: center;
 		transition: all .2s;
+		width: 90%;
+		margin: auto;
+
+		// 900px
+		@media only screen and (max-width: 56.25em) {
+			font-size: 2rem;
+		}
+
+		// 560px
+		@media only screen and (max-width: 35em) {
+			font-size: 1.5rem;
+		}
+
+		&--small {
+			font-size: 2rem;	
+
+			// 1400px
+			@media only screen and (max-width: 87.5em) {
+				font-size: 1.5rem;
+			}
+
+			//560px
+			@media only screen and (max-width: 35em) {
+				font-size: .75rem;
+			}
+		}
 
 		&:link,
 		&:visited {
