--- a/sass/components/_page-links.scss
+++ b/sass/components/_page-links.scss
@@ -8,13 +8,14 @@
 		height: 25rem;
 		margin: auto;
 		margin-bottom: 6rem;
-		border-radius: 10%;
+		border-radius: 5rem;
 		box-shadow: .6rem .6rem 12rem 1rem rgba(0,0,0,.75) inset,
 					-.6rem -.6rem 12rem 1rem rgba(0,0,0,.75) inset, 
 					.3rem .3rem 1rem rgba(0,0,0,.3);
 		overflow: hidden;
 		position: relative;
 
+		// 640px
 		@media only screen and (max-width: 40em) {
 			width: 35.55555rem;
 			height: 20rem;
@@ -35,6 +36,8 @@
 			transition: all .5s;
 			z-index: -1;
 			transform: translateZ(0px);
+			overflow: hidden;
+			border-radius: 5rem;
 		}
 
 		&--erg-chebbi {
