--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -20,5 +20,9 @@
 		&:focus {
 			color: var(--white-color);
 		}
+
+		&:focus {
+			outline: none;
+		}
 	}
 }
